<resources>
    <string name="app_name">hw_2_m3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_first_fragment">This is First Fragment</string>
    <string name="name">Name:</string>
    <string name="last_name">Last name:</string>
    <string name="submit">SUBMIT</string>
    <string name="this_is_my_fourth_fragment">This is my Fourth Fragment</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="study">Study:</string>
    <string name="work">Work:</string>
    <string name="this_is_second_fragment">This is Second Fragment</string>
    <string name="this_is_third_fragment">This is Third Fragment</string>
    <string name="place_of_study">Place of study</string>
    <string name="place_of_work">Place of work</string>
</resources>